--- a/.github/ci.yaml
+++ b/.github/ci.yaml
@@ -69,8 +69,8 @@ jobs:
       DB_HOST: localhost
       DB_USER: root
       DB_PASSWORD: root
-      DB_NAME: rollplay
-      DB_URL: postgresql://root:root@localhost:5432/rollplay_test?sslmode=disable
+      DB_NAME: togglelabs
+      DB_URL: postgresql://root:root@localhost:5432/togglelabs_test?sslmode=disable
       DOCKER: true
 
     services:
@@ -80,7 +80,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: root
           POSTGRES_USER: root
-          POSTGRES_DB: rollplay_test
+          POSTGRES_DB: togglelabs_test
 
         options: >-
           --health-cmd pg_isready
