feat: migrate to mongodb

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
 PORT=6969
-DB_HOST="postgres"
-DB_USER="togglelabs"
-DB_PASSWORD="togglelabs"
-DB_NAME="togglelabs"
-DB_SLL_MODE=disable
-DATABASE_URL=postgresql://togglelabs:togglelabs@localhost:5432/togglelabs?sslmode=disable
+DATABASE=togglelabs
+DATABASE_URL=mongodb://localhost:27017
