--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,6 +64,20 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    env:
+      DB_HOST: localhost
+      DB_USER: root
+      DB_PASSWORD: root
+      DB_NAME: rollplay
+      DB_URL: postgresql://root:root@localhost:5432/rollplay_test?sslmode=disable
+      DOCKER: true
+
+    services:
+      togglelabs_test_db:
+        image: mongo:latest
+        container_name: togglelabs-test-db
+        ports:
+          - "27017:27017"
 
     steps:
       - name: Checkout code
@@ -74,5 +88,5 @@ jobs:
         with:
           go-version: "1.20"
 
-      - name: Test
-        run: go test ./...
+      - name: Run tests
+        run: go test -v ./...
