--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,15 @@ services:
     #   - mongodb_data:/data/db
     networks:
       - togglelabs
+  togglelabs_test_db:
+    image: mongo:latest
+    container_name: togglelabs-test-db
+    ports:
+      - "27017:27017"
+    expose:
+      - 27017
+    networks:
+      - togglelabs
 networks:
   togglelabs:
     driver: bridge
