feat: add health check

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,18 +64,15 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    env:
-      DB_HOST: localhost
-      DB_USER: root
-      DB_PASSWORD: root
-      DB_NAME: rollplay
-      DB_URL: postgresql://root:root@localhost:5432/rollplay_test?sslmode=disable
-      DOCKER: true
-
     services:
       togglelabs_test_db:
         image: mongo:latest
         container_name: togglelabs-test-db
+        options: >-
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         ports:
           - "27017:27017"
 
