--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,17 +64,17 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    services:
-      togglelabs_test_db:
-        image: mongo:latest
-        container_name: togglelabs-test-db
-        options: >-
-          --health-cmd mongo
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - "27017:27017"
+    # services:
+    #   togglelabs_test_db:
+    #     image: mongo:latest
+    #     container_name: togglelabs-test-db
+    #     options: >-
+    #       --health-cmd mongo
+    #       --health-interval 10s
+    #       --health-timeout 5s
+    #       --health-retries 5
+    #     ports:
+    #       - "27017:27017"
 
     steps:
       - name: Checkout code
