--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,6 +58,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "1.20"
+          cache-dependency-path: ./go.sum
 
       - name: Build
         run: go build -v ./cmd/main.go
@@ -87,6 +88,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "1.20"
+          cache-dependency-path: ./go.sum
 
       - name: Run tests
         run: go test -v ./...
