--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,14 @@
     "healthzhandler",
     "labstack",
     "organizationhandler",
+    "organizationmodel",
     "signin",
     "signinhandler",
     "signup",
     "signuphandler",
     "stretchr",
     "togglelabs",
-    "userhandler"
+    "userhandler",
+    "usermodel"
   ]
 }
