--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "signup",
     "signuphandler",
     "stretchr",
+    "timelinemodel",
     "togglelabs",
     "userhandler",
     "usermodel"
