feat: sort feature flags by created_at

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,6 @@
 {
   "cSpell.words": [
     "bson",
-    "featureflaghandler",
-    "featureflagmodel",
-    "healthz",
-    "healthzhandler",
-    "labstack",
-    "organizationhandler",
-    "organizationmodel",
-    "signin",
-    "signinhandler",
-    "signup",
-    "signuphandler",
-    "stretchr",
-    "timelinemodel",
-    "togglelabs",
-    "userhandler",
-    "usermodel"
+    "organizationmodel"
   ]
 }
