--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "cSpell.words": [
-    "bson", 
+    "apierrors",
+    "apiutils",
+    "bson",
     "featureflaghandler",
     "featureflagmodel",
     "healthz",
