--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "healthz",
     "healthzhandler",
     "labstack",
+    "nolint",
     "organizationhandler",
     "organizationmodel",
     "signin",
