feat: use  to remove project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "healthzhandler",
     "labstack",
     "nolint",
+    "oneof",
     "organizationhandler",
     "organizationmodel",
     "signin",
